[package]
name = "rredditr-worker"
version = "0.1.0"
authors = ["cahe"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = {version = "0.10.1", features = ["rustls-tls", "json"] }
tokio = { version = "0.2.11", features = ["rt-core", "rt-threaded"] }
futures = { version = "0.3.1", features = ["compat"] }
futures-util = "0.3.1"
redis = "0.15.1"
failure = "0.1.6"
log = "0.4.8"
env_logger = "0.7.1"
